--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@types/bcrypt": "5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
     "@types/jsonwebtoken": "9.0.6",
     "@types/node": "22.2.0",
@@ -28,7 +29,6 @@
     "express": "4.20.0",
     "jsonwebtoken": "9.0.2",
     "mysql2": "3.11.0",
-    "socket.io": "4.7.5",
     "tsup": "8.2.4",
     "tsx": "4.17.0",
     "zod": "3.23.8"
